--- a/todo
+++ b/todo
@@ -1,3 +1,3 @@
- - flesh p2p sync logic, broadcasting stuff
  - unit test block service functions, websocket functionality
-
+ - make p2p process rejoin logic timeout
+ - add broadcasting for block creation, other events on block chain
